--- a/dra.ipynb
+++ b/dra.ipynb
@@ -2,6 +2,127 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f408cfaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "link0\n",
+    "0.994786 0.042284 0.092805 -0.007610\n",
+    "-0.041953 0.999104 -0.005521 0.000595\n",
+    "-0.092955 0.001599 0.995669 0.015133\n",
+    "0.000000 0.000000 0.000000 1.000000\n",
+    "\n",
+    "link1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a32efc8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(264328,)\n",
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# 指定 .npy 文件的路径\n",
+    "file_path = \"/home/admin123/ssd/Projects/SplatSim/splat/articulated_objects/robot_iphone_labels.npy\"\n",
+    "\n",
+    "# 加载 .npy 文件中的数组\n",
+    "array = np.load(file_path)\n",
+    "\n",
+    "# 打印数组查看内容\n",
+    "print(array.shape)\n",
+    "print(array[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d95c3b9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aabb = ((0, 1, 2), (90, 90, 90))\n",
+    "aabb_list = [[float(val) for val in point] for point in aabb]\n",
+    "#make the aabb_list upto 4 decimal places\n",
+    "aabb_list = [[round(val, 4) for val in point] for point in aabb_list]\n",
+    "\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "\n",
+    "splat_points = np.random.randint(0, 100, size=(100, 3))\n",
+    "\n",
+    "\n",
+    "splat_points = torch.from_numpy(splat_points).to(device='cuda')\n",
+    "condition = (splat_points[:, 0] > aabb_list[0][0]) & (splat_points[:, 0] < aabb_list[1][0]) & (splat_points[:, 1] > aabb_list[0][1]) & (splat_points[:, 1] < aabb_list[1][1]) & (splat_points[:, 2] > aabb_list[0][2]) & (splat_points[:, 2] < aabb_list[1][2])\n",
+    "\n",
+    "# condition = torch.where(condition)[0]\n",
+    "# splat_points = splat_points[condition]\n",
+    "# splat_points\n",
+    "condition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "310b674a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "print(np.ones(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d0289f3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(-1, 10):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 55,
    "id": "7e4adf25",
    "metadata": {},
